--- a/public/stylesheet/user/orderDetails.css
+++ b/public/stylesheet/user/orderDetails.css
@@ -128,6 +128,10 @@ body {
     background: #28a745;
     color: white;
 }
+.warning-message{
+    margin: 10px 0 0 33px;
+    color: orange;
+}
 
 .tracking-step.completed::before {
     content: '';
