--- a/views/user/orderSuccess.ejs
+++ b/views/user/orderSuccess.ejs
@@ -23,7 +23,7 @@
           <div class="order-details">
             <div class="order-detail-row">
               <span class="detail-label">Order ID:</span>
-              <span class="detail-value">#<%= order.orderId %></span>
+              <span class="detail-value"><%= order.orderId %></span>
             </div>
             <div class="order-detail-row">
               <span class="detail-label">Order Date:</span>
