--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -117,13 +117,14 @@
                             <label>Order Status:</label>
                             <select class="status-dropdown" id="modal-order-status">
                                 <option value="Pending">Pending</option>
+                                <option value="Confirmed">Confirmed</option>
                                 <option value="Processing">Processing</option>
                                 <option value="Shipped">Shipped</option>
                                 <option value="Out of Delivery">Out of Delivery</option>
                                 <option value="Delivered">Delivered</option>
                                 <option value="Cancelled">Cancelled</option>
-                                <option value="Return Request">Return Request</option>
                                 <option value="Returned">Returned</option>
+                                <option value="Return Request">Return Request</option>
                             </select>
                         </div>
                         <div class="order-detail">
