--- a/public/stylesheet/user/emailVerify.css
+++ b/public/stylesheet/user/emailVerify.css
@@ -1,21 +1,4 @@
-/* verify-email.css */
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
 
-body {
-    background-color: #f5f5f5;
-    color: #333;
-}
-
-.container {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 20px;
-} */
 
 :root {
     --primary-color: #003049;
@@ -164,6 +147,14 @@ body {
 .verify-btn:hover {
     background-color: #e09410;
 }
+
+#verify-btn:disabled {
+  background-color: #ccc;
+  color: #666;           
+  cursor: not-allowed;   
+  opacity: 0.6;          
+}
+
 
 /* Resend OTP section */
 .resend-container {
